[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="1"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1")

[node name="TopBar" type="HBoxContainer" parent="."]
offset_left = 10.0
offset_top = 50.0
offset_right = 380.0
offset_bottom = 90.0

[node name="HealthLabel" type="Label" parent="TopBar"]
custom_minimum_size = Vector2(110, 0)
text = "HP: 100 / 100"
horizontal_alignment = 0
vertical_alignment = 1

[node name="QueueLabel" type="Label" parent="TopBar"]
custom_minimum_size = Vector2(40, 0)
text = "Next:"
vertical_alignment = 1

[node name="QueueContainer" type="HBoxContainer" parent="TopBar"]
size_flags_horizontal = 3

[node name="GameOverPanel" type="PanelContainer" parent="."]
visible = false
offset_left = 75.0
offset_top = 350.0
offset_right = 315.0
offset_bottom = 490.0

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverPanel"]
offset_left = 10.0
offset_top = 10.0
offset_right = 230.0
offset_bottom = 130.0
alignment = 1

[node name="ResultLabel" type="Label" parent="GameOverPanel/VBoxContainer"]
text = "Level Complete!"
horizontal_alignment = 1

[node name="StarsLabel" type="Label" parent="GameOverPanel/VBoxContainer"]
text = "★ ★ ★"
horizontal_alignment = 1

[node name="RetryButton" type="Button" parent="GameOverPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
text = "Retry"
